src/test/deca/context/valid/115_classePropreType.deca
// Description:
//    Programme minimaliste: une classe pas très utile, avec une seule méthode de type A.
//
// Historique:
//    cree le 01/01/2022

class A {
	A f() {
		return new A();
	}
}
